k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-wizard
  labels:
    app: release-wizard
spec:
  selector:
    app: release-wizard
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  type: ClusterIP
